<?xml version="1.0"?>
<package>
  <name>decision_making_examples</name>
  <version>0.1.0</version>
  <description>Examples of decision_making package usage</description>

  <maintainer email="dan@cogniteam.com">Dan</maintainer>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>decision_making</build_depend>
  <build_depend>decision_making_parser</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>decision_making</run_depend>
  <run_depend>decision_making_parser</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>