<?xml version="1.0"?>
<package>
  <name>rqt_decision_graph</name>
  <version>0.0.1</version>
  <description>The rqt_decision_graph package</description>

  <maintainer email="cogniteam@gmail.com">CogniTeam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>python-rospkg</build_depend>
  <build_depend>qt_dotgraph</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rosservice</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>python_qt_binding</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>python_qt_binding</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>